ecmascript/parser/tests/typescript-errors/tsc/externalModules/typeOnly/exportDeclaration_missingBraces/input.ts.stderr
error: Expected {, got T
  --> $DIR/tests/typescript-errors/tsc/externalModules/typeOnly/exportDeclaration_missingBraces/input.ts:14:15
   |
14 |   export type T; // Normal parse error because there is no other 'T'
   |               ^

